--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,4 +6,7 @@ encoding//Tuan6_Iterator/Iterator/DoublyLinkedListIterator.java=UTF-8
 encoding//Tuan7_HashMap&Table/HashMap/Test_HashMap.java=UTF-8
 encoding//Tuan7_HashMap&Table/Map/MethodOfMap.java=UTF-8
 encoding//Tuan7_HashMap&Table/TreeMap/Test_TreeMap.java=UTF-8
+encoding//Tuan8_Stack/Example/ConvertToBinary.java=UTF-8
+encoding//Tuan8_Stack/MyLinkedStack/MyLinkedStack.java=UTF-8
+encoding//Tuan8_Stack/MyLinkedStack/Test.java=UTF-8
 encoding//src/MegerSort.java=UTF-8
